--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "mdb-react-ui-kit": "^2.3.0",
+    "bootstrap": "^5.2.1",
+    "mdb-react-ui-kit": "^2.4.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
