--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.1",
     "firebase": "8.5",
     "mdb-react-ui-kit": "^2.4.0",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-device-detect": "^2.1.2",
