--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-skills": "^1.27.0",
     "web-vitals": "^2.1.4"
