--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-parallax": "^3.5.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-skills": "^1.27.0",
